Renaming completed
More Lock testing/fine tuning...
Add support for GarageDoors - on list but never actually supported.
Add support for Fanv2 and Fan (simple) -- plugin choosens either Fanv2 (if speedControl device or brightness) or Fan Simple if simple switch
(Can always select Switch and then within App change Icon to Fan as required)

TODO
Fan support, Fan_switch option and Fanv2 support.
Security System
*Window Coverings/Blinds/and there is a Slat device -  also not implemented

Documentation - yucky.
Camera Device - manual entry options.. maybe... - again yucky working well for BI and likely SS
SS as final bit of SS support - need motion in SS devices - hopefully Perry is able to do

UV sensor?
Water level sensor - can hack one together with a humidifer device... haven't tried annoying
then:
Custom - thermostat for me (1 main device, multiple zones for temp only)


Done:
Luminance Sensor
CarbonMonoxide Sensor
Smoke Sensor
Leak Sensor
Fan
Fanv2 - minus swing and rotation direction.
Humidity - seems good
Temperature - seems good, bug fixes for strings in some plugin devices.  No conversion of C to F just presents what you have?  Could do - but can't see point.
Switches - good, also can be changed in app to other representations
ContactSensor - Window/Door open etc good
MotionSensor - good
Lights - RGB control - seems okay (more z wave RGB testing needed), Brightness etc good.  White balance - not supported, although temperature and HueLights hue work fine
Locks - seems good
Action Groups - all via switch or can change icon in HomeKit
Thermostats: Partially supported only; largely because can't test.
For my use case I will likely need to customise the device.  eg. I have one system set to auto/cool/heat with temp max, and then multiple zones
which can be off/setpoint temperature.  Cannot change auto/heat/cool for individual zones, although they do report temperature and otherwise work as a thermostat.